--- a/Main.java/src/view/CadastroClienteView.form
+++ b/Main.java/src/view/CadastroClienteView.form
@@ -186,13 +186,15 @@
                   <Component id="jLabel9" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="CampoCep" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="ComboBoxEstado" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="ComboBoxUF" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="ComboBoxCidade" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="ComboBoxBairro" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="BotaoAtualizarCEP" alignment="0" pref="0" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="CampoCep" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="ComboBoxEstado" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="ComboBoxUF" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="ComboBoxCidade" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="ComboBoxBairro" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
