--- a/Main.java/src/view/ClientePane.form
+++ b/Main.java/src/view/ClientePane.form
@@ -47,12 +47,14 @@
                                   </Group>
                               </Group>
                           </Group>
-                          <Group type="102" attributes="0">
+                          <Group type="102" alignment="0" attributes="0">
                               <Component id="BotaoCadastrarCliente" min="-2" pref="149" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="BotaoAtualizarCliente1" min="-2" pref="149" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="BotaoRemoverCliente" min="-2" pref="149" max="-2" attributes="0"/>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <Component id="BotaoVerHistoricoCliente" min="-2" pref="149" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
@@ -85,6 +87,7 @@
                   <Component id="BotaoCadastrarCliente" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                   <Component id="BotaoAtualizarCliente1" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                   <Component id="BotaoRemoverCliente" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                  <Component id="BotaoVerHistoricoCliente" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="95" max="-2" attributes="0"/>
           </Group>
@@ -216,6 +219,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BotaoRemoverClienteActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="BotaoVerHistoricoCliente">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Hist&#xf3;rico de compras"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BotaoVerHistoricoClienteActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
